[package]
name = "SecureFile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
hex = "0.4.3"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
anyhow = "1.0"
rand = "0.8"
zeroize = "1.4"
rust-argon2 = "1.0"
rpassword = "7.2.0"
